--- a/src/Ens/JobeetBundle/Resources/config/routing.yml
+++ b/src/Ens/JobeetBundle/Resources/config/routing.yml
@@ -4,5 +4,5 @@ EnsJobeetBundle_job:
     prefix: /job
  
 EnsJobeetBundle_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: EnsJobeetBundle:Default:index }
+    pattern:  /
+    defaults: { _controller: EnsJobeetBundle:Job:index }
