--- a/src/Ens/JobeetBundle/Resources/config/routing.yml
+++ b/src/Ens/JobeetBundle/Resources/config/routing.yml
@@ -6,3 +6,7 @@ EnsJobeetBundle_job:
 EnsJobeetBundle_homepage:
     pattern:  /
     defaults: { _controller: EnsJobeetBundle:Job:index }
+
+EnsJobeetBundle_category:
+    pattern:  /category/{slug}/{page}
+    defaults: { _controller: EnsJobeetBundle:Category:show, page: 1 }
